--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html {
