updated link to creator site

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,9 @@ header {
   align-items: center;
   position: relative;
 }
+.header-container a {
+  height: 100%;
+}
 nav {
   position: absolute;
   right: 0;
