--- a/src/styles.css
+++ b/src/styles.css
@@ -412,7 +412,8 @@ footer hr {
 .card {
   background: #fff;
   text-align: center;
-  height: 80%;
+  min-height: 100%;
+  height: 425px;
   width: 25%;
   border-radius: 5px;
   box-shadow: 2px 2px 10px rgba(146, 146, 146, 0.767);
@@ -1102,6 +1103,9 @@ footer hr {
   }
   .highlight::before {
     width: 0;
+  }
+  .card {
+    height: 300px;
   }
 
   .footer-nav li {
